src/tests/select/snapshots/ciboulette2pg__tests__select__query_params__include_multiple_resources_with_sparsing.snap
---
source: src/tests/select/query_params.rs
expression: value

---
[
  {
    "id": "[uuid]",
    "type": "peoples",
    "data": {
      "last-name": "Le Roy"
    }
  },
  {
    "id": "[uuid]",
    "type": "articles",
    "data": {
      "title": "How to dead"
    },
    "related_type": "peoples",
    "related_id": "[uuid]"
  },
  {
    "id": "[uuid]",
    "type": "articles",
    "data": {
      "title": "Oh my g**"
    },
    "related_type": "peoples",
    "related_id": "[uuid]"
  },
  {
    "id": "[uuid]",
    "type": "people-article",
    "data": {
      "article_id": "[uuid]",
      "people_id": "[uuid]"
    },
    "related_type": "peoples",
    "related_id": "[uuid]"
  },
  {
    "id": "[uuid]",
    "type": "people-article",
    "data": {
      "article_id": "[uuid]",
      "people_id": "[uuid]"
    },
    "related_type": "peoples",
    "related_id": "[uuid]"
  }
]
