src/tests/select/snapshots/ciboulette2pg__tests__select__query_params__relationships_many_to_many_sorting_by_child_full_path.snap
---
source: src/tests/select/query_params.rs
expression: value

---
[
  {
    "id": "[uuid]",
    "type": "articles",
    "related_type": "peoples",
    "related_id": "[uuid]"
  },
  {
    "id": "[uuid]",
    "type": "articles",
    "related_type": "peoples",
    "related_id": "[uuid]"
  }
]
