src/tests/select/snapshots/ciboulette2pg__tests__select__query_params__relationships_many_to_one_include_and_sparse.snap
---
source: src/tests/select/query_params.rs
expression: value

---
[
  {
    "id": "[uuid]",
    "type": "author",
    "related_type": "comments",
    "related_id": "[uuid]"
  }
]
